<resources>
    <string name="app_name">Swadheen</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="title_activity_driver_maps">Map</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profile</string>
    <string name="title_search">Search</string>
    <string name="tfe_ic_app_name" translation_description="Image Classification demo app [CHAR_LIMIT=40]">TFL Classify</string>
    <string name="tfe_ic_camera_error" translation_description="Error regarding camera support[CHAR_LIMIT=40]">This device doesn\'t support Camera2 API.</string>
    <string name="tfe_ic_gpu_quant_error" translation_description="Error regarding GPU support for Quant models[CHAR_LIMIT=60]">GPU does not yet supported quantized models.</string>
    <string name="tfe_ic_model" translatable="false">Model:</string>
    <string-array name="tfe_ic_models" translatable="false">
        <item>Quantized_EfficientNet</item>
        <item>Float_EfficientNet</item>
        <item>Quantized_MobileNet</item>
        <item>Float_MobileNet</item>
    </string-array>
    <string name="tfe_ic_device" translatable="false">Device:</string>
    <string-array name="tfe_ic_devices" translatable="false">
        <item>CPU</item>
        <item>GPU</item>
        <item>NNAPI</item>
    </string-array>


    <string name="enter_name">Full Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="address">Address</string>
    <string name="pincode">Pincode</string>
    <string name="landmark">Landmark</string>
    <string name="locality">Locality</string>
    <string name="email">Email id</string>
    <string name="password">Password</string>
    <string name="confirmpassword">Confirm Password</string>
    <string name="enter_city">City</string>
    <string name="enter_store">Store Name</string>
    <string name="enter_institute">Institute Name</string>
    <string name="enter_otp">OTP</string>
    <string name="enter_other">Other</string>
    <string name="enter_institute_website">Institute Website Url</string>


    <string-array name="Spinner_items">
        <item>None</item>
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
    </string-array>

    <string-array name="items_medium_type">
        <item>Choose Category</item>
        <item>Grocery</item>
        <item>Cosmetics</item>
        <item>Footwear</item>
        <item>Electronic Appliances</item>
        <item>Clothes</item>
        <item>Other</item>
    </string-array>

    <string-array name="items_large_type">
        <item>Choose Category</item>
        <item>Construction</item>
        <item>Software and I.T.</item>
        <item>Industrial</item>
        <item>Other</item>
    </string-array>


    <string-array name="Job_type">
        <item>Choose Category</item>
        <item>Painter</item>
        <item>Cobbler</item>
        <item>Carpenter</item>
        <item>Labours</item>
        <item>Mechanic</item>
        <item>Technician</item>
        <item>Mason</item>
        <item>Plumber</item>
        <item>Home Cleaning</item>
        <item>Tailor</item>
        <item>Labour_for_Construction</item>
        <item>Full_day_Labours</item>
        <item>Grocery</item>
        <item>Cosmetics</item>
        <item>Architect</item>
        <item>Electration</item>
        <item>Beauty_care</item>
        <item>Teacher</item>
        <item>Other</item>
    </string-array>
    <string name="title_activity_costumer_maps">Map</string>
    <string name="title_activity_intermediate_questions">IntermediateQuestions</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>


</resources>