<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="240dp"
                android:layout_height="140dp"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                />

            <EditText
                android:id="@+id/etMobileNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="12dp"
                android:maxLength="10"
                android:drawablePadding="3dp"
                android:maxLines="1"
                android:hint="@string/mobile_number"
                android:inputType="phone"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textSize="16sp"/>


            <EditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:background="@android:color/white"
                android:layout_marginTop="6dp"
                android:layout_marginRight="12dp"
                android:hint="@string/enter_name"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:singleLine="true"
                android:drawablePadding="3dp"
                android:textColor="@android:color/black"
                android:textSize="16sp"/>
            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:background="@android:color/white"
                android:layout_marginTop="6dp"
                android:layout_marginRight="12dp"
                android:hint="@string/email"
                android:padding="10dp"
                android:singleLine="true"
                android:drawablePadding="3dp"
                android:textColor="@android:color/black"
                android:textSize="16sp"/>


            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="6dp"
                android:layout_marginRight="12dp"
                android:drawablePadding="3dp"
                android:maxLines="1"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textSize="16sp"/>
            <EditText
                android:id="@+id/etConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="6dp"
                android:layout_marginRight="12dp"
                android:drawablePadding="3dp"
                android:maxLines="1"
                android:hint="@string/confirmpassword"
                android:inputType="textPassword"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textSize="16sp"/>

            <ProgressBar
                android:id="@+id/sign_up_user_progressbar"
                style="?android:attr/progressBarStyle"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:layout_gravity="center"
                android:visibility="invisible"/>


            <Button
                android:id="@+id/sign_up_user_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:enabled="false"
                android:layout_gravity="center"
                android:text="Sign Up"
                android:textAllCaps="false"
                android:textColor="#50000000"
                android:textSize="20sp"/>

        </LinearLayout>




    </ScrollView>
</LinearLayout>
