<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CostumerCompleteRegistration">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/toolbar"
            app:title="Complete Your Registration"
            app:titleTextColor="@color/white"
            android:background="@color/cardview_dark_background"
            />
    </RelativeLayout>



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="65dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">


            <TextView
                android:id="@+id/tv_select_service"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:text="Select Your Service :"
                android:textColor="#000000"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sign_up_worker_confirm_password" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Entrepreneur"
                android:layout_marginLeft="12dp"
                android:background="@android:color/white"
                android:layout_marginTop="6dp"
                android:layout_marginRight="12dp"
                android:padding="10dp"
                android:singleLine="true"
                android:drawablePadding="3dp"
                android:textColor="@android:color/black"
                android:textSize="16sp"/>


            <Spinner
                android:id="@+id/aSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:entries="@array/Spinner_items" />
            <EditText
                android:id="@+id/etCity"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:background="@android:color/white"
                android:layout_marginTop="30dp"
                android:layout_marginRight="12dp"
                android:hint="@string/enter_city"
                android:padding="10dp"
                android:singleLine="true"
                android:drawablePadding="3dp"
                android:textColor="@android:color/black"
                android:textSize="16sp"/>
            <EditText
                android:id="@+id/etAddress"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:background="@android:color/white"
                android:layout_marginTop="30dp"
                android:layout_marginRight="12dp"
                android:hint="@string/address"
                android:padding="10dp"
                android:singleLine="true"
                android:drawablePadding="3dp"
                android:textColor="@android:color/black"
                android:textSize="16sp"/>
            <EditText
                android:id="@+id/etStore"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:background="@android:color/white"
                android:layout_marginTop="30dp"
                android:layout_marginRight="12dp"
                android:hint="@string/enter_store"
                android:padding="10dp"
                android:singleLine="true"
                android:drawablePadding="3dp"
                android:textColor="@android:color/black"
                android:textSize="16sp"/>
            <EditText
                android:id="@+id/etInstitute"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:background="@android:color/white"
                android:layout_marginTop="30dp"
                android:layout_marginRight="12dp"
                android:hint="@string/enter_institute"
                android:padding="10dp"
                android:singleLine="true"
                android:drawablePadding="3dp"
                android:textColor="@android:color/black"
                android:textSize="16sp"/>

            <Spinner
                android:id="@+id/aSpinner_medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:visibility="gone"
                android:entries="@array/items_medium_type"
                />

            <Spinner
                android:id="@+id/aSpinner_Large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:visibility="gone"
                android:entries="@array/items_large_type"
                />

            <EditText
                android:id="@+id/etOther_medium"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:background="@android:color/white"
                android:layout_marginTop="30dp"
                android:layout_marginRight="12dp"
                android:hint="@string/enter_other"
                android:padding="10dp"
                android:singleLine="true"
                android:drawablePadding="3dp"
                android:textColor="@android:color/black"
                android:textSize="16sp"/>
            <EditText
                android:id="@+id/etLarge_Website"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:background="@android:color/white"
                android:layout_marginTop="30dp"
                android:layout_marginRight="12dp"
                android:hint="@string/enter_institute_website"
                android:padding="10dp"
                android:singleLine="true"
                android:drawablePadding="3dp"
                android:textColor="@android:color/black"
                android:textSize="16sp"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="25dp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:text="Education"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="15dp">
                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/ic_baseline_school_24"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginLeft="10dp">
                        <EditText
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:textSize="20dp"
                            android:text="School Details"
                            android:id="@+id/sschool"/>
                        <EditText
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="18dp"
                            android:text="Qualification"
                            android:id="@+id/squalifactio"/>
                        <EditText
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Stream"
                            android:textSize="18dp"
                            android:id="@+id/sstream"/>
                        <EditText

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="20XX-20XX"
                            android:textSize="18dp"
                            android:id="@+id/syear"/>
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="15dp">
                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/ic_baseline_school_24"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:orientation="vertical">
                        <EditText
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:textSize="20dp"
                            android:text="Collage Details"
                            android:id="@+id/cschool"/>
                        <EditText
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="18dp"
                            android:text="Qualification"
                            android:id="@+id/cqualifactio"/>
                        <EditText
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Stream"
                            android:textSize="18dp"
                            android:id="@+id/cstream"/>
                        <EditText
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="20XX-20XX"
                            android:textSize="18dp"
                            android:id="@+id/cyear"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:id="@+id/Sumbit"
                android:text="Confirm Registraton"
                android:background="@color/black"/>
        </LinearLayout>

    </ScrollView>

</androidx.drawerlayout.widget.DrawerLayout>